<resources>
    <string name="app_name">Wifi Analyzer Project</string>
    <string name="location_should_open">Uygulamanın tarama yapabilmesi için konumunuzun açık olması gerekmektedir.</string>
    <string name="stop_scan">TARAMAYI DURDUR</string>
    <string name="start_scan">TARAMAYI BAŞLAT</string>
    <string name="ok">TAMAM</string>
    <string name="cancel">İPTAL ET</string>
    <string name="ssid">SSID</string>
    <string name="bssid">BSSID</string>
    <string name="nickname">Nickname</string>
    <string name="delete">SİL</string>
    <string name="add">EKLE</string>
    <string name="update">GÜNCELLE</string>
    <string name="alert_cancel">İşlem iptal edildi.</string>
    <string name="remain_period">Kalan periyot durumu: </string>

    <string name="around_wifi_information">Çevredeki Wifi Bilgileri</string>
    <string name="around_wifi_information_parameters">ÇEVREDEKİ WIFI BİLGİLERİ \n PARAMETRE GİRİNİZ</string>
    <string name="total_time_as_min">Tarama yapılacak dakika sayısını giriniz</string>
    <string name="every_each_second">Kaç saniyede bir tarama yapılacak?</string>
    <string name="enter_location">Konum bilgisini giriniz?</string>
    <string name="get_around_wifi_information">Çevredeki Ağ Bilgilerini Getir</string>
    <string name="get_current_wifi_information">Bağlı Wifi Bilgileri</string>
    <string name="scan_finished">Tarama işlemi sona erdi.</string>
    <string name="date_format">DD/MM/YYYY HH:MM:SS</string>
    <string name="scanning_times">Tarama Zamanları</string>
    <string name="scanning_results">Tarama Sonuçları</string>
    <string name="edit_device">Cihaz Bilgisi Düzenle</string>
    <string name="device_added">Cihaz Bilgisi Eklendi.</string>
    <string name="device_deleted">Cihaz Bilgisi Silindi.</string>
    <string name="device_updated">Cihaz Bilgisi Güncellendi.</string>
    <string name="are_you_sure_to_delete">Cihaz bilgisini silmek istediğinizden emin misiniz?</string>
    <string name="cannot_be_nickname_empty">Nickname kısmı boş geçilemez.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>