<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#DDDCDC"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/around_wifi_information_parameters"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/etDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total_time_as_min"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingBottom="8dp"
        android:textColor="#000000"
        android:textColorHint="#5A5757" />

    <EditText
        android:id="@+id/etInterval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/every_each_second"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingBottom="8dp"
        android:textColor="#000000"
        android:textColorHint="#5A5757" />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_location"
        android:paddingBottom="16dp"
        android:textColor="#000000"
        android:textColorHint="#5A5757" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|start"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etDeviceLocationX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:hint="Tel. Konum X"
            android:inputType="number|numberDecimal"
            android:paddingBottom="16dp"
            android:textColor="#000000"
            android:textColorHint="#5A5757" />

        <EditText
            android:id="@+id/etDeviceLocationY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Tel. Konum Y"
            android:inputType="number|numberDecimal"
            android:paddingBottom="16dp"
            android:textColor="#000000"
            android:textColorHint="#5A5757" />

        <EditText
            android:id="@+id/etDeviceLocationZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Tel. Konum Z"
            android:inputType="number|numberDecimal"
            android:paddingBottom="16dp"
            android:textColor="#000000"
            android:textColorHint="#5A5757" />



    </LinearLayout>

    <EditText
        android:id="@+id/etNumberOfPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="Kişi Sayısı"
        android:inputType="number"
        android:paddingBottom="16dp"
        android:textColor="#000000"
        android:textColorHint="#5A5757" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_red"
            android:insetRight="10dp"
            android:text="@string/cancel"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_green"
            android:text="@string/ok"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>