<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="52dp">

        <TextView
            android:id="@+id/textViewAlertEditDeviceSSID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/ssid"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/textViewAlertEditDeviceBSSID"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAlertEditDeviceBSSID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/bssid"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/textViewAlertEditDeviceNickname"
            app:layout_constraintTop_toBottomOf="@+id/textViewAlertEditDeviceSSID" />

        <TextView
            android:id="@+id/textViewAlertEditDeviceNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="32dp"
            android:text="@string/nickname"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAlertEditDeviceBSSID" />

        <EditText
            android:id="@+id/editTextEditDeviceSSID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:clickable="true"
            android:contextClickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/ssid"
            android:inputType="text"

            android:textColor="#000000"
            android:textColorHint="#776868"
            app:layout_constraintBottom_toBottomOf="@+id/textViewAlertEditDeviceSSID"
            app:layout_constraintStart_toEndOf="@+id/textViewAlertEditDeviceSSID"
            app:layout_constraintTop_toTopOf="@+id/textViewAlertEditDeviceSSID" />

        <EditText
            android:id="@+id/editTextEditDeviceBSSID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:clickable="true"
            android:contextClickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/bssid"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#776868"
            app:layout_constraintBottom_toBottomOf="@+id/textViewAlertEditDeviceBSSID"
            app:layout_constraintStart_toEndOf="@+id/textViewAlertEditDeviceBSSID"
            app:layout_constraintTop_toTopOf="@+id/textViewAlertEditDeviceBSSID" />

        <EditText
            android:id="@+id/editTextEditDeviceNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:ems="10"
            android:hint="@string/nickname"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#776868"
            app:layout_constraintBottom_toBottomOf="@+id/textViewAlertEditDeviceNickname"
            app:layout_constraintStart_toEndOf="@+id/textViewAlertEditDeviceNickname"
            app:layout_constraintTop_toTopOf="@+id/textViewAlertEditDeviceNickname" />

        <Button
            android:id="@+id/buttonAlertEditDeviceAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#00FA0D"
            android:clickable="false"
            android:contextClickable="false"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/buttonAlertEditDeviceDelete"
            app:layout_constraintStart_toEndOf="@+id/buttonAlertEditDeviceCancel"
            app:layout_constraintTop_toBottomOf="@+id/buttonAlertEditDeviceDelete" />

        <Button
            android:id="@+id/buttonAlertEditDeviceCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FF9E80"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonAlertEditDeviceAdd"
            app:layout_constraintStart_toStartOf="@+id/buttonAlertEditDeviceDelete"
            app:layout_constraintTop_toBottomOf="@+id/buttonAlertEditDeviceDelete" />

        <Button
            android:id="@+id/buttonAlertEditDeviceDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#FF0000"
            android:text="@string/delete"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEditDeviceNickname" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>